# olieigra

./: LICENSE  README.md  pyproject.toml  sample_cuda.py  sample_gph20s10k.py  sample_qa.py
experiments/: 04_transform_data_qa.ipynb  05_explore_data_qa.ipynb  README.md  download_data.ipynb  download_docs.ipynb  explore_data_qa.ipynb  transform_data_gph20s10k.ipynb  transform_data_qa.ipynb  transform_station_list.ipynb
experiments/igra_timeseries/: 01_transform_USM00072649.ipynb
experiments/liftedindex_lr/: 02_calculate_features_labels.ipynb  02_transform_station_list.ipynb  06_transform_data_gph20s10k.ipynb  10_NotebookAutoencoderSearch2d.ipynb  11_NotebookAutoencoderTrain.ipynb  11_calculate_li.ipynb  12_NotebookAutoencoderTest.ipynb  20_NotebookAutoencoderSearch2d.ipynb  20_NotebookAutoencoderTrain.ipynb  20_NotebookPytorch_li.ipynb  21_NotebookAutoencoderTrain.ipynb  21_ProductionLi.py  30_NotebookPytorch_li.ipynb  NotebookAutoencoderSearch2d.ipynb  NotebookAutoencoderTest.ipynb  NotebookAutoencoderTrain.ipynb  NotebookAutoencoderTrain1d.ipynb  NotebookPytorch1.ipynb  NotebookPytorch_li.ipynb  NotebookigraReductionLI.ipynb  ProductionLi.py  README.md  calculate_features_labels.ipynb  calculate_li.ipynb  cmd_process_igra.py
experiments/storm_events/: 01_download_docs.ipynb  02_transform_csvfiles.ipynb  02_transform_fedcodes.ipynb  03_download_files.ipynb  04_transform_data.ipynb  10_transform_severe_records.ipynb  12_transform_severe_maidenhead.ipynb  12_transform_tornado_maidenhead.ipynb  14_maidenhead_igra.ipynb  20_igra_autoencoder_trainer.ipynb  20_igra_encoder_trainer.ipynb  21_igra_autoencoder_tester.ipynb  21_igra_encoder_tester.ipynb  22_igra_autoencoder_index.ipynb  25_igra_encode.ipynb  30_maidenhead_igra.ipynb  30_maidenhead_igra_en35.ipynb  (+2 more)
tests/: test_body_model.py  test_crawler.py  test_header_model.py  test_reader.py
(+7 files in other folders)
