[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olieigra"
version = "0.0.1"
authors = [
  { name="Paul Olson", email="olievortex@gmail.com" },
]
description = "Olie's IGRA2 Implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/olievortex/olieigra/wiki"
Issues = "https://github.com/olievortex/olieigra/issues"
