[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olieigra"
version = "0.0.1"
authors = [
  { name="Paul Olson", email="olievortex@gmail.com" },
]
description = "Olie's IGRA2 Implementation"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "metpy>=1.7.1",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pandasql>=0.7.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/olievortex/olieigra/wiki"
Issues = "https://github.com/olievortex/olieigra/issues"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
